extended themes to microphone options

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Farbe
 
 SING_OPTIONS_MICROPHONES_CARD=Soundkarte
 SING_OPTIONS_MICROPHONES_INPUT=Eingang
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Rauschunterdr.
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mic-Anhebung
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
@@ -668,6 +674,7 @@ C_LYRICS=Lyrics
 
 C_MEDLEY=Medley
 C_MEDLEYC=Medley berechnet
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Mikrofone
 C_MODE=Modus
 
@@ -678,6 +685,7 @@ C_NO_INTERNET_CONNECTION=Keine Internetverbindung
 C_OPEN_PLAYLIST=Wiedergabeliste öffnen
 C_OPTIONS=Optionen
 
+;TODO: C_PLAYER=Player
 C_PLAYERS=Spieler
 C_PLAYLIST=Wiedergabeliste
 C_PROFILES=Profile
