--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Värv
 
 SING_OPTIONS_MICROPHONES_CARD=Muusikakaart
 SING_OPTIONS_MICROPHONES_INPUT=Sisend
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Tunnetus
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofoni võimendus
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Ostsilloskoop
@@ -668,6 +674,7 @@ C_LYRICS=Laulusõnad
 
 C_MEDLEY=Popurii
 C_MEDLEYC=Popurii kalkuleeritud
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Mikrofonid
 C_MODE=Režiim
 
@@ -678,6 +685,7 @@ C_NO_INTERNET_CONNECTION=Internetiühendus puudub
 C_OPEN_PLAYLIST=Ava esitusloend
 C_OPTIONS=Valikuvõimalused
 
+;TODO: C_PLAYER=Player
 C_PLAYERS=Mängijad
 C_PLAYLIST=Esitusloend
 C_PROFILES=Profiilid
