--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
 SING_OPTIONS_MICROPHONES_CARD=Soundcard
 SING_OPTIONS_MICROPHONES_INPUT=Input
-SING_OPTIONS_MICROPHONES_CHANNEL=Channel
+SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Threshold
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mic boost
+
+SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
@@ -668,6 +674,7 @@ C_LYRICS=Lyrics
 
 C_MEDLEY=Medley
 C_MEDLEYC=Medyley calcultated
+C_MICROPHONE= Microphone
 C_MICROPHONES=Microphones
 C_MODE=Mode
 
@@ -678,6 +685,7 @@ C_NO_INTERNET_CONNECTION=No internet connection
 C_OPEN_PLAYLIST=Open playlist
 C_OPTIONS=Options
 
+C_PLAYER=Player
 C_PLAYERS=Players
 C_PLAYLIST=Playlist
 C_PROFILES=Profiles
