--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR_DESC=Cambia el color de los elementos
 
 SING_OPTIONS_MICROPHONES_CARD=Dispositivo de sonido
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
-SING_OPTIONS_MICROPHONES_CHANNEL=Canal
+SING_OPTIONS_MICROPHONES_CHANNEL=Asignar micrófono
 SING_OPTIONS_MICROPHONES_THRESHOLD=Reducción de ruido
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Potenciar micrófono
+
+SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Elige el micrófono que quieres configurar
+SING_OPTIONS_MICROPHONES_INPUT_DESC=Selecciona la entrada donde está conectado el micrófono
+SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Asigna este micrófono a un jugador
+SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduce el nivel de ruido del micrófono
+SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Aumenta la potencia del micrófono
 
 SING_OPTIONS_ADVANCED_DEBUG=Mostrar FPS
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscopio
@@ -666,6 +672,7 @@ C_LYRICS=Letras
 
 C_MEDLEY=Versión corta
 C_MEDLEYC=Versión corta calculada
+C_MICROPHONE=Micrófono
 C_MICROPHONES=Micrófonos
 C_MODE=Modo
 
@@ -676,6 +683,7 @@ C_NO_INTERNET_CONNECTION=Sin conexión a internet
 C_OPEN_PLAYLIST=Abrir lista de reproducción
 C_OPTIONS=Opciones
 
+C_PLAYER=Jugador
 C_PLAYERS=Jugadores
 C_PLAYLIST=Lista de reproducción
 C_PROFILES=Perfiles
