--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Spalva
 
 SING_OPTIONS_MICROPHONES_CARD=Garso plokštė
 SING_OPTIONS_MICROPHONES_INPUT=Įvestis
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanalas
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Slenkstis
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrobangų krosnelė
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Derinti
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskopas
@@ -666,6 +672,7 @@ C_LYRICS=Dainos žodžiai
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Įrašyti
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Įrašyti
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
