--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Szín
 
 SING_OPTIONS_MICROPHONES_CARD=Hangkártya
 SING_OPTIONS_MICROPHONES_INPUT=Bemenet
-SING_OPTIONS_MICROPHONES_CHANNEL=Csatorna
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Tűréshatár
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikr. erősítése
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Hibakezelő mód
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszcilloszkóp
@@ -666,6 +672,7 @@ C_LYRICS=Dalszöveg
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 ;TODO: C_MICROPHONES=Mikrofonok
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_LYRICS=Dalszöveg
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
