--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Cor
 
 SING_OPTIONS_MICROPHONES_CARD=Placa de Som
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
-SING_OPTIONS_MICROPHONES_CHANNEL=Canal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Threshold
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Microfone Boost
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Modo debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscópio
@@ -666,7 +672,8 @@ C_LYRICS=Letras
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
-C_MICROPHONES=Gravação
+;TODO: C_MICROPHONE=Microphone
+;TODO: C_MICROPHONES=Microphones
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
@@ -676,6 +683,7 @@ C_MICROPHONES=Gravação
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
