--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Farba
 
 SING_OPTIONS_MICROPHONES_CARD=Zvuková karta
 SING_OPTIONS_MICROPHONES_INPUT=Vstup
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanál
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Prah počuteľnosti
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Zosilnenie mikrofónu
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Režim ladenia
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskop
@@ -666,6 +672,7 @@ C_LYRICS=Text
 
 C_MEDLEY=Všehochuť
 C_MEDLEYC=Všehochuť vypočítaná
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Mikrofón
 C_MODE=Režim
 
@@ -676,6 +683,7 @@ C_NO_INTERNET_CONNECTION=Nie je dostupné pripojenie k internetu
 C_OPEN_PLAYLIST=Otvoriť playlist
 C_OPTIONS=Možnosti
 
+;TODO: C_PLAYER=Player
 C_PLAYERS=Hráči
 C_PLAYLIST=Playlist
 C_PROFILES=Profily
