--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Väri
 
 SING_OPTIONS_MICROPHONES_CARD=Äänikortti
 SING_OPTIONS_MICROPHONES_INPUT=Tulo
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanava
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Aloituspiste
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikkiboosti
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Virheentunnistus
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Ääniaallokko
@@ -666,6 +672,7 @@ C_LYRICS=Lyriikat
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Mikrofonit
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Mikrofonit
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
@@ -712,41 +720,3 @@ C_THEMES=Teemat
 ;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
-
-;UNUSED: SING_OPTIONS_GAME=
-;UNUSED: SING_OPTIONS_GRAPHICS=
-;UNUSED: SING_OPTIONS_SOUND=
-;UNUSED: SING_OPTIONS_LYRICS=
-;UNUSED: SING_OPTIONS_THEMES=
-;UNUSED: SING_OPTIONS_MICROPHONES=
-;UNUSED: SING_OPTIONS_ADVANCED=
-;UNUSED: SING_OPTIONS_NETWORK=Internet
-;UNUSED: SING_OPTIONS_EXIT=
-
-;UNUSED: OPTION_VALUE_BLUE=
-;UNUSED: OPTION_VALUE_GREEN=
-;UNUSED: OPTION_VALUE_PINK=
-;UNUSED: OPTION_VALUE_RED=
-;UNUSED: OPTION_VALUE_VIOLET=
-;UNUSED: OPTION_VALUE_ORANGE=
-;UNUSED: OPTION_VALUE_YELLOW=
-;UNUSED: OPTION_VALUE_BROWN=
-;UNUSED: OPTION_VALUE_BLACK=
-;UNUSED: OPTION_VALUE_GRAY=
-;UNUSED: OPTION_VALUE_WHITE=
-;UNUSED: OPTION_VALUE_TURQUOISE=
-;UNUSED: OPTION_VALUE_SALMON=
-;UNUSED: OPTION_VALUE_GREENYELLOW=
-;UNUSED: OPTION_VALUE_LAVENDER=
-;UNUSED: OPTION_VALUE_BEIGE=Beige
-;UNUSED: OPTION_VALUE_TEAL=
-;UNUSED: OPTION_VALUE_ORCHID=
-;UNUSED: OPTION_VALUE_STEELBLUE=
-;UNUSED: OPTION_VALUE_PLUM=
-;UNUSED: OPTION_VALUE_CHOCOLATE=
-;UNUSED: OPTION_VALUE_GOLD=
-;UNUSED: OPTION_VALUE_DARKBLUE=
-;UNUSED: OPTION_VALUE_SKY=
-;UNUSED: OPTION_VALUE_HARLEQUIN=
-;UNUSED: OPTION_VALUE_CYAN=
-;UNUSED: OPTION_VALUE_FLAME=
