--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Litur
 
 SING_OPTIONS_MICROPHONES_CARD=Hljóðkort
 SING_OPTIONS_MICROPHONES_INPUT=Inntak
-SING_OPTIONS_MICROPHONES_CHANNEL=Rás
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Þröskuldur
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Hljóðnemaaukning
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Villuprófun
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Sveiflusjá
@@ -666,6 +672,7 @@ C_LYRICS=Lagatextar
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Upptaka
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Upptaka
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
