--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=色
 
 SING_OPTIONS_MICROPHONES_CARD=サウンドカード
 SING_OPTIONS_MICROPHONES_INPUT=入力
-SING_OPTIONS_MICROPHONES_CHANNEL=チャネル
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=極限
 SING_OPTIONS_MICROPHONES_MIC_BOOST=マイク・ブースト
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=ディバッグ
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=オシロスコープ
@@ -666,6 +672,7 @@ C_LYRICS=歌詞
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=録音
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=録音
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
