--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Color
 
 SING_OPTIONS_MICROPHONES_CARD=Tarjeta de so
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
-SING_OPTIONS_MICROPHONES_CHANNEL=Canal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Llindar
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Ampli Micro
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscil·loscopi
@@ -668,6 +674,7 @@ C_LYRICS=LLetres
 
 C_MEDLEY=Barreja
 C_MEDLEYC=Barreja calculada
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Micròfons
 C_MODE=Mode
 
@@ -678,6 +685,7 @@ C_NO_INTERNET_CONNECTION=No hi ha connexió a Internet
 C_OPEN_PLAYLIST=Obre la llista de reproducció
 C_OPTIONS=Opcions
 
+;TODO: C_PLAYER=Player
 C_PLAYERS=Jugadors
 C_PLAYLIST=Llista de reproducció
 C_PROFILES=Perfils
