--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Farve
 
 SING_OPTIONS_MICROPHONES_CARD=Lydkort
 SING_OPTIONS_MICROPHONES_INPUT=Input
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Tærskel
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofon Boost
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Fejlfinde
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloskop
@@ -666,6 +672,7 @@ C_LYRICS=Tekster
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Optag
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Optag
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
