--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Kolorea
 
 SING_OPTIONS_MICROPHONES_CARD=Soinu-txartela
 SING_OPTIONS_MICROPHONES_INPUT=Sarrera
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanala
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Arintzea
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofonoa indartu
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 ;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
 ;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
@@ -666,6 +672,7 @@ C_LYRICS=Letrak
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Grabazioa
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Grabazioa
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
