--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Couleur
 
 SING_OPTIONS_MICROPHONES_CARD=Carte son
 SING_OPTIONS_MICROPHONES_INPUT=Entrée
-SING_OPTIONS_MICROPHONES_CHANNEL=Canal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Suppression du bruit
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Amplifier le micro
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Débogage
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
@@ -666,6 +672,7 @@ C_LYRICS=Paroles
 
 C_MEDLEY=Version courte
 C_MEDLEYC=Version courte calculé
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Micros
 C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_NO_INTERNET_CONNECTION=Pas de connexion Internet
 C_OPEN_PLAYLIST=Ouvrir playlist
 C_OPTIONS=Options
 
+C_PLAYER=Joueur
 C_PLAYERS=Joueurs
 C_PLAYLIST=Playlist
 C_PROFILES=Profils
