--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Faarf
 
 SING_OPTIONS_MICROPHONES_CARD=Soundkaart
 SING_OPTIONS_MICROPHONES_INPUT=Agank
-SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 SING_OPTIONS_MICROPHONES_THRESHOLD=Rauschënnerdrëck.
 SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikro-Unhiewung.
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
@@ -666,6 +672,7 @@ C_LYRICS=Lyric
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Mikro
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Mikro
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
