--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -174,9 +174,15 @@ SING_OPTIONS_THEMES_COLOR=Culoare
 
 SING_OPTIONS_MICROPHONES_CARD=Placă de sunet
 SING_OPTIONS_MICROPHONES_INPUT=Intrare
-SING_OPTIONS_MICROPHONES_CHANNEL=Canal
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL=Assign microphone
 ;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD=Threshold
 ;TODO: SING_OPTIONS_MICROPHONES_MIC_BOOST=Mic boost
+
+;TODO: SING_OPTIONS_MICROPHONES_SOUNDCARD_DESC=Choose the microphone you want to configure
+;TODO: SING_OPTIONS_MICROPHONES_INPUT_DESC=Select the input where the microphone is connected
+;TODO: SING_OPTIONS_MICROPHONES_CHANNEL_DESC=Assign this microphone to a player
+;TODO: SING_OPTIONS_MICROPHONES_THRESHOLD_DESC=Reduces microphone noise level
+;TODO: SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 
 SING_OPTIONS_ADVANCED_DEBUG=Mod de depanare
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscop
@@ -666,6 +672,7 @@ C_LYRICS=Versuri
 
 ;TODO: C_MEDLEY=Medley
 ;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONE=Microphone
 C_MICROPHONES=Microfoane
 ;TODO: C_MODE=Mode
 
@@ -676,6 +683,7 @@ C_MICROPHONES=Microfoane
 ;TODO: C_OPEN_PLAYLIST=Open playlist
 ;TODO: C_OPTIONS=Options
 
+;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
 ;TODO: C_PLAYLIST=Playlist
 ;TODO: C_PROFILES=Profiles
