extended themes to advanced options

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Ampli Micro
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscil·loscopi
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Després de triar cançó
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Prequnta abans de sortida
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Menú Automàtic de festa
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Prequnta abans de sortida
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Puntuacions més altes
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Tot
 OPTION_VALUE_PLAYER=Jugador
