--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Meudachadh a’ mhic
 SING_OPTIONS_ADVANCED_DEBUG=Dì-bhugachadh
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Às dèidh òrain tagh
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ceistean dìonaidh
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Fèin-chlàr-cèilidh
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Ceistean dìonaidh
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Na sgòran as àirde
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Na h-uile
 OPTION_VALUE_PLAYER=Cluicheadair
