--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikkiboosti
 SING_OPTIONS_ADVANCED_DEBUG=Virheentunnistus
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Ääniaallokko
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Kappaleen valinnan jälkeen
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Turvakyselyt
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Automaattinen tiimipeli
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Turvakyselyt
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Kaikki
 ;TODO: OPTION_VALUE_PLAYER=Player
