--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Pojacanje mikrofona
 SING_OPTIONS_ADVANCED_DEBUG=Dibagiranje
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Posle Odabira Pesme
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Bezbednosna Pitanja
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Automatski Timski Meni
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Bezbednosna Pitanja
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Sve
 OPTION_VALUE_PLAYER=Играч
