--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mic-Anhebung
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Nach Songauswahl
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sicherheitsabfr.
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto Party-Menü
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Sicherheitsabfr.
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Alle
 OPTION_VALUE_PLAYER=Spieler
