--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Increases microphone power
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ONSONGCLICK=After song select
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Safety questions
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Safety questions
+SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=All
 OPTION_VALUE_PLAYER=Player
