--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MICBOOST_DESC=Aumenta la potencia del micrófono
 SING_OPTIONS_ADVANCED_DEBUG=Mostrar FPS
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscopio
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Al seleccionar canción
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Confirmar al salir
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto menú de fiesta
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Confirmar al salir
+SING_OPTIONS_ADVANCED_PARTYPOPUP=Asistente de fiesta
 SING_OPTIONS_ADVANCED_TOPSCORES=Mostrar calificaciones
+
+SING_OPTIONS_ADVANCED_DEBUG_DESC=Mostrar los fotogramas por segundos del juego
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Mostrar señal de voz en la pantalla canta
+SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Elegir que hacer al seleccionar canción
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirmar al salir del juego
+SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Mostrar menú al seleccionar una canción en modo fiesta
+SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Mostrar las 5 mejores puntuaciones de un jugador
 
 OPTION_VALUE_ALL=Todos los jugadores
 OPTION_VALUE_PLAYER=Jugador actual
