--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Amplifier le micro
 SING_OPTIONS_ADVANCED_DEBUG=Débogage
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Choix ap. chanson
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Demander avant de quitter
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu fête auto
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Demander avant de quitter
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Tout
 OPTION_VALUE_PLAYER=Joueur
