--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Amplifica suono mic.
 SING_OPTIONS_ADVANCED_DEBUG=Debug
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscopio
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Dopo canzone selezzionata
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Domande di sicurezza
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu Party automatico
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Domande di sicurezza
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Migliori risultati
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Tutti i giocatori
 OPTION_VALUE_PLAYER=Giocatore
