--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikr. erősítése
 SING_OPTIONS_ADVANCED_DEBUG=Hibakezelő mód
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszcilloszkóp
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Zeneválasztás után
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Megerősítést kér
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Partymenü megj.
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Megerősítést kér
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Ranglista
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Összes
 OPTION_VALUE_PLAYER=Játékos
