--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofon-gain
 SING_OPTIONS_ADVANCED_DEBUG=Feilsøking
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Etter sang:
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sikkerhetsspørsmål
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto partymeny
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Sikkerhetsspørsmål
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Alt
 OPTION_VALUE_PLAYER=Spiller
