--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Zosilnenie mikrofónu
 SING_OPTIONS_ADVANCED_DEBUG=Režim ladenia
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Po zvolení skladby
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Potvrdzovanie
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Potvrdzovanie
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Top skóre
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Všade
 OPTION_VALUE_PLAYER=Hráč
