--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Ojacitev mikrofona
 SING_OPTIONS_ADVANCED_DEBUG=Odpravljanje hrošcev
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Po izboru pesmi
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Zašcitno vprašanje
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Samodejni nacin Zabava
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Zašcitno vprašanje
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Vse
 OPTION_VALUE_PLAYER=Igralec
