--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -187,9 +187,16 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Ισχύς μικροφώνου
 SING_OPTIONS_ADVANCED_DEBUG=Αποσυμφόρηση
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Οσκιλοσκόπιο
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Μετά απο την επιλογή τραγουδιού
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ερωτήσεις ασφαλείας
-SING_OPTIONS_ADVANCED_PARTYPOPUP=Αυτόματο μενού "Πάρτυ"
+SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Ερωτήσεις ασφαλείας
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+
+;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
+;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
+;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
+;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores 
 
 OPTION_VALUE_ALL=Όλα
 OPTION_VALUE_PLAYER=Παίχτης
